--- a/src/app/components/admin/dashboard/dashboard.component.html
+++ b/src/app/components/admin/dashboard/dashboard.component.html
@@ -36,10 +36,12 @@
                         <div *ngFor="let menuItem of data" class="shadow-2xl">
                             <div [class]="menuItem.status" class="cursor-pointer" (click)="openMenuDetail(menuItem.syncros_id)">
                                 <p><b>ID: </b>{{menuItem.syncros_id}}</p>
-                                <p><b>Status: </b>{{menuItem.status}}</p>
+                                <p><b>Estado: </b>{{menuItem.status}}</p>
                                 <p><b>Tiempo Inicial: </b> {{menuItem.start_time | date: 'd/M/yy'}}</p>
                                 <p><b>Tiempo Final: </b>{{menuItem.end_time | date: 'd/M/yy'}}</p>
-                                <p><b>Tiempo Transcurrido: </b>{{menuItem.end_time | date: 'd/M/yy'}}</p>
+                                <p><b>Tiempo Transcurrido: </b>{{menuItem.tt}}</p>
+                                <p><b>Tipo de Ejecucion: </b>{{menuItem.mode}}</p>
+                                <p><b>Porcentaje: </b>{{menuItem.percentage}}</p>
                             </div>
                         </div>
                     </div>
