se realizaron las mejoras

--- a/src/app/components/admin/envio-menu/envio-menu.component.html
+++ b/src/app/components/admin/envio-menu/envio-menu.component.html
@@ -6,9 +6,20 @@
 
         <div class="example-button-rowcard flex flex-wrap gap-2 justify-content-center">
             <button mat-raised-button style="background-color: #147fa6f6;" mat-flat-button
-                color="primary">SINCRONIZACION PERSONALIZADA (MAXPOINT)</button>
-            <button [disabled]="btnSincronizarMaxpointDisabled" mat-raised-button style="background-color: #1fa44f;"
-                mat-flat-button color="primary" (click)="sincronizarMaxpoint()">SINCRONIZAR CON MAXPOINT</button>
+                color="primary">{{txtBtnBlue}}</button>
+            <button [disabled]="btnSincronizarMaxpointDisabled" mat-raised-button
+                style="background-color: #1fa44f; width: 17rem;" mat-flat-button color="primary"
+                (click)="sincronizarMaxpoint()">
+                @if (btnSincronizarMaxpointDisabled) {
+                <div class="cargando">
+                    <div class="pelotas"></div>
+                    <div class="pelotas"></div>
+                    <div class="pelotas"></div>
+                </div>
+                } @else {
+                {{txtBtnGreen}}
+                }
+            </button>
         </div>
 
         <span class="flex text-sm mt-3">
@@ -24,7 +35,9 @@
                         <div class="m-4 flex justify-between items-center">
                             <h3 class="text-lg">Menu</h3>
                             <div class="flex">
-                                <input type="text" class="w-40 rounded-lg -mr-6 pl-3 pr-8" placeholder="Buscar" [ngModel]="buscarMenu" (ngModelChange)="onChangeInput($event)">
+                                <input [disabled]="formularioFiltro === null" type="text"
+                                    class="w-40 rounded-lg -mr-6 pl-3 pr-8" placeholder="Buscar"
+                                    [(ngModel)]="buscarMenu" (ngModelChange)="onChangeInput($event)">
                                 <button class="border-l pl-1"><i class="ri-filter-line"
                                         (click)="openFilterMenu()"></i></button>
                             </div>
@@ -54,7 +67,8 @@
                                     (change)="setAllSubMenus($event.checked, menu)" [(ngModel)]="menu.select"
                                     (ngModelChange)="updateAllCompleteMenu()">
                                     <div class="font-semibold text-sm">
-                                        <p>Sincro ID: {{menu.syncrosId}} - Fecha: {{menu.endTime | date: 'd/M/yy, h:mm a':'GMT'}}</p>
+                                        <p>Sincro: {{menu.syncrosId}} - Fecha: {{menu.endTime | date: 'd/M/yy, h:mm
+                                            a':'GMT'}}</p>
                                     </div>
                                 </mat-checkbox>
                                 <span>
@@ -63,7 +77,7 @@
                                         <mat-checkbox [(ngModel)]="submenu.select"
                                             (ngModelChange)="updateAllCompleteSubMenus(menu)">
                                             <div class="border border-gray-300 py-1 px-5 text-xs">
-                                               <!--  <p>{{submenu[0].checksum}}</p> -->
+                                                <!--  <p>{{submenu[0].checksum}}</p> -->
                                                 <p>{{submenu[0].menus[0].title}}</p>
                                             </div>
                                         </mat-checkbox>
@@ -79,7 +93,9 @@
                             [totalRecords]="total_recordsMenu" (onPageChange)="paginate($event)"></p-paginator>
                     </div>
                     } @else {
-                    <div>No hay Data</div>
+                    <div class="w-full h-full flex justify-center items-center">
+                        <div class="text-3xl text-slate-400">No hay Data</div>
+                    </div>
                     }
 
 
@@ -106,7 +122,8 @@
                                 (ngModelChange)="updateAllCompleteCategorias()">
                                 <div class="font-semibold text-sm">
                                     <!-- <p>{{categoria.id}}</p> -->
-                                    <p>Sincro ID: {{categoria.syncrosId}} - Fecha: {{categoria.endTime | date: 'd/M/yy, h:mm a':'GMT'}}</p>
+                                    <p>Sincro: {{categoria.syncrosId}} - Fecha: {{categoria.endTime | date: 'd/M/yy,
+                                        h:mm a':'GMT'}}</p>
                                     <p>{{categoria.title}}</p>
                                 </div>
                             </mat-checkbox>
@@ -116,7 +133,7 @@
                                     <mat-checkbox [(ngModel)]="subcategoria.select"
                                         (ngModelChange)="updateAllCompleteSubCategorias(categoria)">
                                         <div class="border border-gray-300 py-1 px-5 text-xs">
-                                           <!--  <p>{{subcategoria.id}}</p> -->
+                                            <!--  <p>{{subcategoria.id}}</p> -->
                                             <p>{{subcategoria.title}}</p>
                                         </div>
                                     </mat-checkbox>
@@ -163,7 +180,8 @@
                                 (change)="setAllSubProductos($event.checked, producto)" [(ngModel)]="producto.select"
                                 (ngModelChange)="updateAllCompleteProductos()" class="w-full flex justify-between">
                                 <div class="font-semibold text-sm">
-                                    <p>Sincro ID: {{producto.syncrosId}} - Fecha: {{producto.endTime | date: 'd/M/yy, h:mm a':'GMT'}}</p>
+                                    <p>Sincro: {{producto.syncrosId}} - Fecha: {{producto.endTime | date: 'd/M/yy,
+                                        h:mm a':'GMT'}}</p>
                                     <p>{{producto.title}}</p>
                                 </div>
                             </mat-checkbox>
@@ -175,6 +193,7 @@
                                         <div class="border border-gray-300 py-1 px-5 text-xs">
                                             <!-- <p>{{subproducto[0].id}}</p> -->
                                             <p>{{subproducto[0].title}}</p>
+                                            <p>Precio: ${{subproducto[0].priceinfo.price/100}}</p>
                                         </div>
                                     </mat-checkbox>
                                 </div>
