--- a/src/app/components/admin/dashboard/dashboard.component.html
+++ b/src/app/components/admin/dashboard/dashboard.component.html
@@ -8,9 +8,9 @@
             <p>/Dashboard</p>
         </span>
 
-        <div class="h-[calc(100%-96px)] p-5 bg-gray-100 rounded-lg shadow-md overflow-auto">
+        <div class="h-[calc(100%-96px)] p-5 bg-gray-100 rounded-lg shadow-md">
 
-            <div class="h-2/4 mb-8">
+            <div class="h-2/4">
                 <p class="text-xl mt-1 mb-4">Ultimos envios de menú </p>
                 <div class="grid justify-items-stretch grid-cols-6 2xl:grid-cols-12 gap-1 text-xs">
                     <!--    <div *ngFor="let menuItem of menuItems$ | async" class="shadow-2xl">
@@ -24,37 +24,37 @@
                 </div>
             </div>
 
-            <div class="h-2/4 mb-8">
+            <div class="h-2/4">
                 <p class="text-xl mt-1 mb-4">Sincronizaciones con Maxpoint</p>
-                @if (showLoading) {
+                <div style="height: 72%;" class="overflow-auto">
+                    @if (showLoading) {
                     <div class="w-full h-full flex justify-center items-center">
                         <div class="loader"></div>
                     </div>
                     } @else {
-                <!-- <div *ngIf='data | async; else loading'> -->
+                    <!-- <div *ngIf='data | async; else loading'> -->
                     <div class="grid justify-items-stretch grid-cols-6 2xl:grid-cols-12 gap-1 text-xs">
                         <div *ngFor="let menuItem of data" class="shadow-2xl">
-                            <div [class]="menuItem.status" class="cursor-pointer" (click)="openMenuDetail(menuItem.syncros_id)">
+                            <div [class]="menuItem.status" class="cursor-pointer"
+                                (click)="openMenuDetail(menuItem.syncros_id)">
                                 <p><b>ID: </b>{{menuItem.syncros_id}}</p>
                                 <p><b>Estado: </b>{{menuItem.status}}</p>
-                                <p><b>Tiempo Inicial: </b> {{menuItem.start_time | date: 'd/M/yy'}}</p>
-                                <p><b>Tiempo Final: </b>{{menuItem.end_time | date: 'd/M/yy'}}</p>
+                                <p><b>Tiempo Inicial: </b> {{menuItem.start_time | date: 'd/M/yy, h:mm:ss
+                                    a':'GMT'}}</p>
+                                <p><b>Tiempo Final: </b>{{menuItem.end_time | date: 'd/M/yy, h:mm:ss
+                                    a':'GMT'}}</p>
                                 <p><b>Tiempo Transcurrido: </b>{{menuItem.tt}}</p>
                                 <p><b>Tipo de Ejecucion: </b>{{menuItem.mode}}</p>
-                                <p><b>Porcentaje: </b>{{menuItem.percentage}}</p>
+                                <p><b>Porcentaje: </b><p-progressBar [value]="menuItem.percentage.replace('%','')" />
+                                </p>
+
                             </div>
                         </div>
                     </div>
-                    <p-paginator [rows]="rows" [totalRecords]="total_records"
-                        (onPageChange)="paginate($event)"></p-paginator>
-                }
-                <!-- </div> -->
-                <!-- <ng-template #loading>
-                    <div class="w-full h-full flex justify-center items-center">
-                        <div class="loader"></div>
-                    </div>
-                </ng-template> -->
-
+                    }
+                </div>
+                <p-paginator  [rows]="rows"
+                    [totalRecords]="total_records" (onPageChange)="paginate($event)"></p-paginator>
             </div>
         </div>
     </div>
