--- a/src/app/components/admin/envio-menu/envio-menu.component.css
+++ b/src/app/components/admin/envio-menu/envio-menu.component.css
@@ -59,3 +59,44 @@
 :host ::ng-deep .p-highlight {
     background-color: rgb(246, 167, 167);
 }
+
+.cargando{
+    width: 80px;
+    height: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+.cargando span{
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.pelotas {
+    width: 12px;
+    height: 12px;
+    background-color: #ffffff;
+    animation: salto .3s alternate infinite;
+    border-radius: 50% 
+}
+
+.pelotas:nth-child(2) {
+    animation-delay: .18s;
+}
+
+.pelotas:nth-child(3) {
+    animation-delay: .37s;
+}
+
+@keyframes salto {
+    from {
+        transform: scaleX(1.25);
+    }
+    to{
+        transform: 
+        translateY(-13px) scaleX(1);
+    }
+}
