se realizan las correciones de QA

--- a/src/app/components/admin/dashboard/dashboard.component.html
+++ b/src/app/components/admin/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="h-2/4">
-                <p class="text-xl mt-1 mb-4">Sincronizaciones con Maxpoint</p>
+                <p class="text-xl mb-2">Sincronizaciones con Maxpoint</p>
                 <div style="height: 72%;" class="overflow-auto">
                     @if (showLoading) {
                     <div class="w-full h-full flex justify-center items-center">
