--- a/src/app/components/admin/filter-menu/filter-menu.component.html
+++ b/src/app/components/admin/filter-menu/filter-menu.component.html
@@ -15,7 +15,7 @@
                 <input formControlName="fechaInicio" matStartDate placeholder="Fecha inicio">
                 <input formControlName="fechaFin" matEndDate placeholder="Fecha fin">
             </mat-date-range-input>
-            <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+            <mat-hint>DD/MM/AAAA – DD/MM/AAAA</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-date-range-picker touchUi #picker></mat-date-range-picker>
         </mat-form-field>
